--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
 			<div class="ui  menu my">
 				<div class="ui container">
 					<div class="headername">
-						test
+						Hitzkart
 					</div>
 					<div class="right menu">
 						<a class="ui item" ng-click="togglemenu()"><i class="big sidebar  icon"></i></a>
