--- a/www/index.html
+++ b/www/index.html
@@ -1,132 +1,163 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>HCI</title>
-		<!-- lib -->
-		<script src="lib/angular.min.js"></script>
-		<script src="lib/p5.min.js" charset="utf-8"></script>
-		<script src="lib/jquery-3.2.1.min.js" charset="utf-8"></script>
+<head>
+	<meta charset="utf-8">
+	<title>HCI</title>
+	<!-- lib -->
+	<script src="lib/angular.min.js"></script>
+	<script src="lib/p5.min.js" charset="utf-8"></script>
+	<script src="lib/jquery-3.2.1.min.js" charset="utf-8"></script>
 
-		<script src="Semantic-UI-CSS-master/semantic.js" charset="utf-8"></script>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="materialize/js/materialize.min.js" charset="utf-8"></script>
+	<link rel="stylesheet" href="materialize/css/materialize.min.css">
 
-		<link rel="stylesheet" href="Semantic-UI-CSS-master/semantic.css">
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<!-- <canvas id="canvas" width="400" height="400" style="border: 1px solid black; cursor: pointer;"></canvas> -->
-		<div id ="myCtrl" ng-app="myApp" ng-controller="myCtrl" >
-			<div class="ui  menu my">
-				<div class="ui container">
-					<div class="headername">
-						Hitzkart
-					</div>
-					<div class="right menu">
-						<a class="ui item" ng-click="togglemenu()"><i class="big sidebar  icon"></i></a>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<!-- <canvas id="canvas" width="400" height="400" style="border: 1px solid black; cursor: pointer;"></canvas> -->
+	<div id ="myCtrl" ng-app="myApp" ng-controller="myCtrl" >
 
-					</div>
 
+		<nav class=" teal darken-1">
+			<div class="nav-wrapper">
+				<a href="#" class="brand-logo center">HitzMap</a>
+				<ul class="right">
+			         <li>
+								 <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+							 </li>
+				</ul>
+			</div>
+		</nav>
+
+		<div id="delete-modal" class="modal">
+	    <div class="modal-content">
+	      <h5>Wollen Sie dieses Element Löschen?</h4>
+
+	    </div>
+	    <div class="modal-footer">
+				<a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat">Nein</a>
+	      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Ja</a>
+	    </div>
+	  </div>
+
+		<div class="ui basic modal room">
+			<div class="ui icon header">
+				<i class="archive icon"></i>
+				Wollen sie den Raum Löschen?
+			</div>
+			<div class="content">
+				<p>x :{{selectetRoom.x}} </p>
+				<p>y: {{selectetRoom.y}}</p>
+				<p>{{selectetRoom.date|date}}</p>
+			</div>
+			<div class="actions">
+				<div class="ui red basic cancel inverted button">
+					<i class="remove icon"></i>
+					No
+				</div>
+				<div class="ui green ok inverted button" ng-click="removeRoom()">
+					<i class="checkmark icon"></i>
+					Yes
 				</div>
 			</div>
+		</div>
 
-			<div class="ui right demo vertical inverted sidebar labeled icon menu">
-			  <a class="item">
-			    <i class="home icon"></i>
-			    Home
-			  </a>
-			  <a class="item">
-			    <i class="info icon"></i>
-			    Info
-			  </a>
-			  <a class="item">
-			    <i class="archive icon"></i>
-			    Impressum
-			  </a>
+		<div id = "heatmapContainer" class="state">
+			<div class="text-content" ng-show="state== -1" class="">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
 			</div>
+			<div  ng-show = "state == 0 || state ==2 || state == 4">
+				<div id="canvas"></div>
 
-			<div class="wrapper">
-				<a type="button" class="circle " name="button"> <i class="angle large up icon"></i>
-				</a>
-				<div class="ui basic modal dot">
-					<div class="ui icon header">
-					  <i class="archive icon"></i>
-					  Wollen sie den Punkt Löschen?
-					</div>
-					<div class="content">
-					  <p>x :{{selectetDot.x}} </p>
-						<p>y: {{selectetDot.y}}</p>
-						<p>{{selectetDot.date|date}}</p>
-					</div>
-					<div class="actions">
-					  <div class="ui red basic cancel inverted button">
-					    <i class="remove icon"></i>
-					    No
-					  </div>
-					  <div class="ui green ok inverted button" ng-click="removeDot()">
-					    <i class="checkmark icon"></i>
-					    Yes
-					  </div>
-					</div>
+				<div class="fixed-action-btn vertical click-to-toggle" ng-show = "state == 0 || state == 2">
+					<a class="btn-floating btn-large red">
+						<i class="material-icons">menu</i>
+					</a>
+					<ul ng-show = "state == 0">
+						<li><a class="btn-floating blue"><i class="material-icons">delete</i></a></li>
+						<li><a class="btn-floating green"><i class="material-icons">gamepad</i></a></li>
+						<li><a class="btn-floating yellow darken-1"><i class="material-icons">router</i></a></li>
+						<li><a class="btn-floating red"><i class="material-icons">add</i></a></li>
+
+					</ul>
 				</div>
-
-				<div class="ui basic modal room">
-					<div class="ui icon header">
-					  <i class="archive icon"></i>
-					  Wollen sie den Raum Löschen?
-					</div>
-					<div class="content">
-					  <p>x :{{selectetRoom.x}} </p>
-						<p>y: {{selectetRoom.y}}</p>
-						<p>{{selectetRoom.date|date}}</p>
-					</div>
-					<div class="actions">
-					  <div class="ui red basic cancel inverted button">
-					    <i class="remove icon"></i>
-					    No
-					  </div>
-					  <div class="ui green ok inverted button" ng-click="removeRoom()">
-					    <i class="checkmark icon"></i>
-					    Yes
-					  </div>
-					</div>
-				</div>
-
-
-
-				<div class="state">
-					<div ng-show="state== -1" class="">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-					<div  ng-show = "state == 0 || state ==2 || state == 4">
-						<div id="canvas"></div>
-					</div>
-					<div   ng-show = "state == 1" >
-						x : {{selectetRoom.x}} </br>
-						y : {{selectetRoom.y}}</br>
-						width : {{selectetRoom.width}}</br>
-						height : {{selectetRoom.height}}
-					</div>
-					<div   ng-show = "state == 3" >
-						<h1>test</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<div   ng-show = "state == 5" >
-						<h1>ENDE</h1>
-					</div>
-
-				</div>
-
-				<div id= "nav" class="ui two bottom buttons  " >
-					<div class="ui button" data-vivaldi-spatnav-clickable="1" ng-click="abort()" ng-if="state >-1">Zurück</div>
-					<div class="ui button" data-vivaldi-spatnav-clickable="1" ng-click= "next()" ng-if="state <5" >Weiter</div>
-				</div>
-
+			</div>
+			<div class="text-content"  ng-show = "state == 1" >
+				x : {{selectetRoom.x}} </br>
+				y : {{selectetRoom.y}}</br>
+				width : {{selectetRoom.width}}</br>
+				height : {{selectetRoom.height}}
+			</div>
+			<div class="text-content"  ng-show = "state == 3" >
+				<h1>test</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div  class="text-content" ng-show = "state == 5" >
+				<h1>ENDE</h1>
 			</div>
 
 		</div>
 
-		<script src="class/myRect.js" charset="utf-8"></script>
-		<script src="class/myDot.js" charset="utf-8"></script>
-		<script src="index.js" charset="utf-8"></script>
-	</body>
+		<div id="nav">
+			<div class="row center-align" >
+				<div class="waves-effect waves-light btn" data-vivaldi-spatnav-clickable="1" ng-click="abort()" ng-if="state >-1">Zurück</div>
+				<div class="waves-effect waves-light btn" data-vivaldi-spatnav-clickable="1" ng-click= "next()" ng-if="state <5" >Weiter</div>
+			</div>
+		</div>
+
+		<ul id="slide-out" class="side-nav">
+      <li><a href="#!">First Sidebar Link</a></li>
+      <li><a href="#!">Second Sidebar Link</a></li>
+      <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header">Dropdown<i class="material-icons">arrow_drop_down</i></a>
+            <div class="collapsible-body">
+              <ul>
+                <li><a href="#!">First</a></li>
+                <li><a href="#!">Second</a></li>
+                <li><a href="#!">Third</a></li>
+                <li><a href="#!">Fourth</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="#!">First Sidebar Link</a></li>
+      <li><a href="#!">Second Sidebar Link</a></li>
+      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="#!">First</a></li>
+        <li><a href="#!">Second</a></li>
+        <li><a href="#!">Third</a></li>
+        <li><a href="#!">Fourth</a></li>
+      </ul>
+    </ul>
+
+	</div>
+
+<script type="text/javascript" src="lib/heatmap.js-master/build/heatmap.min.js"></script>
+
+	<script src="class/myRect.js" charset="utf-8"></script>
+	<script src="class/myDot.js" charset="utf-8"></script>
+	<script src="index.js" charset="utf-8"></script>
+</body>
 </html>
