--- a/www/index.html
+++ b/www/index.html
@@ -95,6 +95,9 @@
 						<li><a class="btn-floating yellow darken-1" ng-click="switch(1)"><i class="material-icons">router</i></a></li>
 						<li><a class="btn-floating red" ng-click="switch(0)"><i class="material-icons">add</i></a></li>
 
+					<ul ng-show = "state == 2">
+						<li><a class="btn-floating blue"><i class="material-icons">delete</i></a></li>
+						<li><a class="btn-floating red"><i class="material-icons">add</i></a></li>
 					</ul>
 				</div>
 			</div>
