--- a/www/index.html
+++ b/www/index.html
@@ -90,10 +90,10 @@
 						<i class="material-icons">menu</i>
 					</a>
 					<ul ng-show = "state == 0">
-						<li><a class="btn-floating blue"><i class="material-icons">delete</i></a></li>
-						<li><a class="btn-floating green"><i class="material-icons">gamepad</i></a></li>
-						<li><a class="btn-floating yellow darken-1"><i class="material-icons">router</i></a></li>
-						<li><a class="btn-floating red"><i class="material-icons">add</i></a></li>
+						<li><a class="btn-floating blue" ng-click="switch(3)"><i class="material-icons">delete</i></a></li>
+						<li><a class="btn-floating green" ng-click="switch(2)" ><i class="material-icons">gamepad</i></a></li>
+						<li><a class="btn-floating yellow darken-1" ng-click="switch(1)"><i class="material-icons">router</i></a></li>
+						<li><a class="btn-floating red" ng-click="switch(0)"><i class="material-icons">add</i></a></li>
 
 					</ul>
 				</div>
@@ -155,7 +155,7 @@
 	</div>
 
 <script type="text/javascript" src="lib/heatmap.js-master/build/heatmap.min.js"></script>
-
+	<script src="class/router.js" charset="utf-8"></script>
 	<script src="class/myRect.js" charset="utf-8"></script>
 	<script src="class/myDot.js" charset="utf-8"></script>
 	<script src="index.js" charset="utf-8"></script>
