--- a/www/index.html
+++ b/www/index.html
@@ -98,8 +98,8 @@
 						<li><a class="btn-floating red" ng-click="switch(0)"><i class="material-icons">add</i></a></li>
 					</ul>
 					<ul ng-show = "state == 2">
-						<li><a class="btn-floating blue"><i class="material-icons">delete</i></a></li>
-						<li><a class="btn-floating red"><i class="material-icons">add</i></a></li>
+						<li><a class="btn-floating blue" ng-click="switch(1)"><i class="material-icons">delete</i></a></li>
+						<li><a class="btn-floating red" ng-click="switch(0)"><i class="material-icons">add</i></a></li>
 					</ul>
 				</div>
 			</div>
