--- a/www/index.html
+++ b/www/index.html
@@ -268,7 +268,7 @@
 							<tr class="green accent-4">
 								<td>Optimal</td>
 							</tr>
-							<tr class="yellow accent-2">
+							<tr class="yellow lime">
 								<td>Gut</td>
 							</tr>
 							<tr class="orange accent-4">
