--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 	<script src="lib/p5.min.js" charset="utf-8"></script>
 	<script src="lib/jquery-3.2.1.min.js" charset="utf-8"></script>
 
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 	<script src="materialize/js/materialize.min.js" charset="utf-8"></script>
 	<link rel="stylesheet" href="materialize/css/materialize.min.css">
 
